# Autonomous-Research-Agent

./: .gitignore  README.md  main.py  pyproject.toml
ai-observability-agent/: README.md
api/: routes.py
app/graph/: engine.py
app/graph/nodes/: evaluator.py  planner.py  synthesizer.py  tool_selector.py
autonomous-research-agent/: README.md  main.py
autonomous-research-agent/api/: schemas.py
autonomous-research-agent/graph/: engine.py  state.py
autonomous-research-agent/graph/nodes/: evaluator.py  tool_selector.py
autonomous-research-agent/tools/: calculator.py  registry.py
codebase-intelligence-agent/: README.md
frontend/: package-lock.json  package.json
frontend/src/: routeTree.gen.ts
frontend/src/components/auth/: GoogleSignInButton.tsx
frontend/src/components/layout/: SidebarNav.tsx  Topbar.tsx
frontend/src/lib/: projects.ts
frontend/src/routes/: __root.tsx  systems.index.tsx
graph/: engine.py
graph/nodes/: tool_executor.py
multi-agent-orchestration/: README.md
multi-tool-autonomous-research-system/: main.py
multi-tool-autonomous-research-system/api/: routes.py
multi-tool-autonomous-research-system/graph/nodes/: planner.py  synthesizer.py
streaming-agent-runtime/: README.md
tests/test_graph/: test_topology.py
tools/: calculator.py  reasoning.py  web_search.py
ui/: package-lock.json  package.json
ui/.lovable/: plan.md
ui/src/: routeTree.gen.ts  styles.css
ui/src/lib/: use-session.ts
ui/src/routes/: _authenticated.tsx  index.tsx  login.tsx  systems.$slug.tsx
ui/supabase/: config.toml
(+26 files in other folders)
