[project]
name = "multi-tool-autonomous-research-system"
version = "0.1.0"
description = "A multi-tool autonomous research system that can plan, execute, and iterate on research tasks using various tools."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
]

[tool.uv.workspace]
members = [
    "multi-tool-autonomous-research-system",
]
